--- a/index.html
+++ b/index.html
@@ -72,11 +72,13 @@
 
             <div class="btn long flex">
 
-                <div class="item flex">
+                <div class="item flex relative">
 
                     <i class="fas fa-user-friends"></i>
     
                     <span>Manager Partecipants</span>
+
+                    <span id="par-num">18</span>
     
                 </div>
 
