--- a/index.html
+++ b/index.html
@@ -10,7 +10,310 @@
 </head>
 <body class="debug">
 
-    <main>
+    <main class="flex">
+
+        <section class="colum">
+
+            <i class="fas fa-caret-left gray"></i>
+            <span>1/2</span>
+
+        </section>
+
+        <section class="central flex">
+
+            <div class="box flex border">
+
+                <div class="name ">
+
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div id="gengar" class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div id="lava" class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div id="key" class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div id="kiojin" class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div id="dbz" class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div id="kirito"class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div id="shigatsu"class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            <div class="box flex">
+
+                <div class="name ">
+
+                    <i class="fas fa-microphone-alt-slash"></i>
+                    <span>Jhonny Cash</span>
+
+                </div>
+
+            </div>
+
+
+            
+            
+
+        </section>
+
+        <section class="colum">
+
+            <i class="fas fa-caret-right blue"></i>
+            <span>1/2</span>
+
+        </section>
 
     </main>
 
